--- a/spa-react-netcore-redis/voting/voting/ClientApp/package.json
+++ b/spa-react-netcore-redis/voting/voting/ClientApp/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^3.3.7",
+    "bootstrap": ">=3.4.0",
     "bootstrap-sass": "^3.3.7",
     "node-sass-chokidar": "^1.3.2",
     "redis": "^2.8.0",
